To Fix:
- smb:// paths werken niet
- Afbeeldingen, seizoenen e.d. opslaan in de submappen
- Update bepaalde playlists op een bepaald tijdstip
- Localize all strings
- Artist / song recognizition met Epic Rap Battles


0.9.6:
- Uses normal icon/fanart again. (if you liked the newyear art better, you can still find it in the root)
- Added Feature: Only grab the last X videos instead of grabbing all videos from the channel / playlist
- Fixed Bug: Unicode error when playing videos
- Fixed Bug: Unicode file paths (japanese characters etc work)
- Fix: special://profile is now used (fix for double userdata/userdata included :S)
- Fix: Changed service start from startup to login



0.9.5.1:
- Fixed Bug: Images (folder.jpg etc.) will not be downloaded everytime the playlist is updated.
- Fixed Error: If the youtube server is not connectable, it will retry in 15 seconds with SSL disabled
- Fixed Error: division by zero error whith playback on video on some devices
- Fixed Error: If images are not downloadable with https://, it will try to download with http://
- Fixed some other small things & bugs

0.9.5 - Happy New Year!
- Now works with youtube-dl instead of pafy to get video url (This makes VEVO video playback possible as well)

- Added Feature: MusicVideo Support:
	Added MusicVideo Features:
	- Guess artist - song from youtube video/description
	- Use playlist name, video channel name, hardcoded as Artist fallback
	- Use video title as Song title fallback
	- Guess Album from video title/description
	- Fallback on hardcoded album
	- Use video description, playlist description or a hardcoded Plot as plot (description of the music video)
	- Guess Year from video title/description
	- Use published year or a hardcoded year as year fallback
	- Option to not add (skip the video) if recognizition of any tag fails
	- Auto tags Audio-only videos as 'audio'
	- Auto tags Live vidoes as 'live'
	- Auto tags Lyric videos as 'lyrics'